* All Code: Added Generics/Templating * DateTimeFactory: Removed redundant null-check.